Don't use Java9+ features.