@@ -19,6 +19,8 @@
 
 package org.elasticsearch.action.fieldcaps;
 
+import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableSet;
 import org.elasticsearch.common.io.stream.Writeable;
 import org.elasticsearch.common.xcontent.XContentParser;
 import org.elasticsearch.test.AbstractSerializingTestCase;
@@ -99,8 +101,8 @@ public class FieldCapabilitiesTests extends AbstractSerializingTestCase<FieldCap
 
         builder = new FieldCapabilities.Builder("field", "type");
         builder.add("index1", true, true, Collections.emptyMap());
-        builder.add("index2", true, true, Map.of("foo", "bar"));
-        builder.add("index3", true, true, Map.of("foo", "quux"));
+        builder.add("index2", true, true, ImmutableMap.of("foo", "bar"));
+        builder.add("index3", true, true, ImmutableMap.of("foo", "quux"));
         {
             FieldCapabilities cap1 = builder.build(false);
             assertThat(cap1.isSearchable(), equalTo(true));
@@ -108,7 +110,7 @@ public class FieldCapabilitiesTests extends AbstractSerializingTestCase<FieldCap
             assertNull(cap1.indices());
             assertNull(cap1.nonSearchableIndices());
             assertNull(cap1.nonAggregatableIndices());
-            assertEquals(Map.of("foo", Set.of("bar", "quux")), cap1.meta());
+            assertEquals(ImmutableMap.of("foo", ImmutableSet.of("bar", "quux")), cap1.meta());
 
             FieldCapabilities cap2 = builder.build(true);
             assertThat(cap2.isSearchable(), equalTo(true));
@@ -117,7 +119,7 @@ public class FieldCapabilitiesTests extends AbstractSerializingTestCase<FieldCap
             assertThat(cap2.indices(), equalTo(new String[]{"index1", "index2", "index3"}));
             assertNull(cap2.nonSearchableIndices());
             assertNull(cap2.nonAggregatableIndices());
-            assertEquals(Map.of("foo", Set.of("bar", "quux")), cap2.meta());
+            assertEquals(ImmutableMap.of("foo", ImmutableSet.of("bar", "quux")), cap2.meta());
         }
     }
 
@@ -150,10 +152,10 @@ public class FieldCapabilitiesTests extends AbstractSerializingTestCase<FieldCap
             meta = Collections.emptyMap();
             break;
         case 1:
-            meta = Map.of("foo", Set.of("bar"));
+            meta = ImmutableMap.of("foo", ImmutableSet.of("bar"));
             break;
         default:
-            meta = Map.of("foo", Set.of("bar", "baz"));
+            meta = ImmutableMap.of("foo", ImmutableSet.of("bar", "baz"));
             break;
         }
 
@@ -230,7 +232,7 @@ public class FieldCapabilitiesTests extends AbstractSerializingTestCase<FieldCap
         case 7:
             Map<String, Set<String>> newMeta;
             if (meta.isEmpty()) {
-                newMeta = Map.of("foo", Set.of("bar"));
+                newMeta = ImmutableMap.of("foo", ImmutableSet.of("bar"));
             } else {
                 newMeta = Collections.emptyMap();
             }
